--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
         "Chrome > 67"
     ],
     "devDependencies": {
+        "@babel/core": "^7.15.0",
+        "@babel/plugin-proposal-decorators": "^7.14.5",
+        "@babel/preset-env": "^7.15.0",
+        "@babel/preset-typescript": "^7.15.0",
         "@types/webpack-env": "^1.16.2",
+        "babel-loader": "^8.2.2",
         "copy-webpack-plugin": "^9.0.1",
         "css-loader": "^6.2.0",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.3.2",
         "style-loader": "^3.2.1",
-        "ts-loader": "^9.2.5",
         "tsconfig-paths-webpack-plugin": "^3.5.1",
-        "typescript": "^4.3.5",
         "webpack": "^5.48.0",
         "webpack-cli": "^4.7.2"
     },
