--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "scripts": {
         "build": "webpack --config webpack.config.js",
-        "start": ""
+        "start": "webpack serve --config webpack.config.js"
     },
     "browserslist": [
         ">2%",
@@ -30,7 +30,8 @@
         "style-loader": "^3.2.1",
         "tsconfig-paths-webpack-plugin": "^3.5.1",
         "webpack": "^5.48.0",
-        "webpack-cli": "^4.7.2"
+        "webpack-cli": "^4.7.2",
+        "webpack-dev-server": "^3.11.2"
     },
     "dependencies": {
         "@webcomponents/webcomponentsjs": "^2.6.0",
