--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@babel/preset-typescript": "^7.15.0",
         "@types/webpack-env": "^1.16.2",
         "babel-loader": "^8.2.2",
+        "clean-webpack-plugin": "^4.0.0-alpha.0",
         "copy-webpack-plugin": "^9.0.1",
         "css-loader": "^6.2.0",
         "file-loader": "^6.2.0",
