--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "license": "MIT",
     "scripts": {
         "build": "webpack --config webpack.config.js",
-        "start": "webpack serve --host 0.0.0.0 --config webpack.config.js"
+        "start": "webpack serve --host 0.0.0.0 --config webpack.config.js",
+        "predeploy": "NODE_ENV=production yarn build",
+        "deploy": "node publish.js"
     },
     "browserslist": ">1%, not dead, ie 11",
     "devDependencies": {
@@ -22,6 +24,7 @@
         "copy-webpack-plugin": "^9.0.1",
         "css-loader": "^6.2.0",
         "file-loader": "^6.2.0",
+        "gh-pages": "^3.2.3",
         "html-webpack-plugin": "^5.3.2",
         "style-loader": "^3.2.1",
         "tsconfig-paths-webpack-plugin": "^3.5.1",
